[package]
name = "flexc"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "full" ] }
async-channel = "1.6"
async-trait = "0.1"
futures = "0.3"
redis = { version = "0.17", default-features = false, features = ["tokio-comp"] }
