[package]
name = "flexc"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio-rt" ]
tokio-rt = ["tokio", "redis/tokio-comp"]
async-rt = ["async-std", "redis/async-std-comp"]

[dependencies]
async-std = { version =  "1.9.0", optional = true }
tokio = { version = "0.2", features = [ "full" ], optional = true }
async-channel = "1.6"
async-trait = "0.1"
futures = "0.3"
redis = { version = "0.17", default-features = false }
