[package]
name = "flexc"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# async-rt: There are not lowered api in smol or async-std's Semaphore has https://docs.rs/smol/1.2.5/smol/lock/struct.Semaphore.html
[features]
default = [ "tokio-rt" ]
tokio-rt = ["tokio", "redis/tokio-comp"]

[dependencies]
crossbeam-queue = "0.3.1"
tokio = { version = "0.2", features = [ "full" ], optional = true }
async-channel = "1.6"
async-trait = "0.1"
redis = { version = "0.17", default-features = false }
