[package]
name = "flexc-redis"
version = "0.5.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
futures = "0.3"
num_cpus = "1.13.0"
async-channel = "1.6"
tokio = { version = "1.0", features = [ "full" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
mpmc = { package = "crossbeam-channel", version = "0.5.0" }

[features]
serde = [ "flexc/serde" ]
default = [ "tokio-rt" ]
tokio-rt = [ "flexc/tokio-rt", "redis/tokio-comp" ]
async-rt = [ "flexc/async-rt", "redis/async-std-comp" ]
tokio-rt-tls = [ "flexc/tokio-rt", "redis/tokio-native-tls-comp" ]
async-rt-tls = [ "flexc/async-rt", "redis/async-std-tls-comp" ]

[dependencies]
flexc = { path = "../flexc", default-features = false }
redis = { version = "0.21.4", default-features = false }
