[package]
name = "flexc"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
futures = "0.3"

[features]
default = [ "tokio-rt" ]
tokio-rt = [ "tokio" ]
async-rt = [ "async-std", "async-lock" ]

[dependencies]
futures-util = "0.3"
async-trait = "0.1"
crossbeam-queue = "0.3.1"
tokio = { version = "0.2", features = [ "full" ], optional = true }
async-std = { version = "1.7", features = [ "attributes" ], optional = true }
async-lock = { version =  "2.3.0", optional = true }
