[package]
name = "flexc"
version = "0.2.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
futures = "0.3"

[features]
default = [ "tokio-rt" ]
tokio-rt = [ "tokio" ]
async-rt = [ "async-std", "async-lock" ]

[dependencies]
futures-util = "0.3"
async-trait = "0.1"
crossbeam-queue = "0.3"
tokio = { version = "0.2.19", features = [ "full" ], optional = true }
async-std = { version = "1.6", features = [ "attributes" ], optional = true }
async-lock = { version =  "2.1", optional = true }
serde = { version =  "1.0", features = [ "derive" ], optional = true }
