[package]
name = "main-smol"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
async-channel = "1.6"
flexc-redis = { path = "../../", default-features = false, features = [ "async-rt", "serde" ] }
redis = { version = "0.21", default-features = false, features = [ "async-std-comp" ] }
smol = "1.2.5"
serde_json = "1"
