[package]
name = "main-tokio"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
async-channel = "1.6"
flexc-redis = { path = "../../", features = [ "serde" ] }
redis = { version = "0.20", default-features = false, features = [ "tokio-comp" ] }
tokio = { version = "1.0", features = [ "full" ] }
serde_json = "1"
